--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				</div>
 				<div class="social">
 					<a target=”_blank” href="https://www.linkedin.com/in/milan-prouteau-613a6411b/">
-						<img src="./images/lk.webp" alt="Logo Lk">
+						<img src="./images/lk.png" alt="Logo Lk">
 					</a>
 				</div>
 			</div>
